kubectl/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: crocodilestick/calibre-web-automated:latest      
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "2Gi"
              cpu: "1000m"  
          volumeMounts:
            - mountPath: /config
              name: truenas-volume-calibre
              subPath: calibre/config
            - mountPath: /cwa-book-ingest
              name: nfs
              subPath: applications/qbittorrent-nox/volumes/downloads/calibre/ingest
          securityContext:
            runAsUser: 0
            runAsGroup: 0
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
        - name: truenas-volume-calibre
          persistentVolumeClaim:
            claimName: truenas-pvc-calibre
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-service
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: calibre
  ports:
    - name: http
      port: 8677
      targetPort: 8677
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - calibre.joeberry.org
  rules:
  - host: calibre.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: calibre.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
